# ACEngineer

./: .gitignore  newfile..md  plan2.md  plan3.md  process_transcripts.py  prompt.md
AgenticKanban/: agentic-workflows-analysis.md  package-lock.json  package.json  prompt.md  tailwind.config.js
agentic-prompt-engineering/: .env.sample  .gitignore  .mcp.json.firecrawl_7k.sample  .mcp.json.playwright_10k.sample  .mcp.json.replicate_28k.sample
building-specialized-agents/: .gitignore  .mcp.json.all_17k.sample  .mcp.json.playwright_10k.sample  .mcp.json.sample  README.md
building-specialized-agents/apps/custom_1_pong_agent/: README.md  package.json  pong_agent.py  pong_agent.ts  pyproject.toml
building-specialized-agents/apps/custom_1_pong_agent/prompts/: PONG_AGENT_SYSTEM_PROMPT.md
building-specialized-agents/apps/custom_2_echo_agent/: README.md  echo_agent.py  pyproject.toml
building-specialized-agents/apps/custom_2_echo_agent/prompts/: ECHO_AGENT_SYSTEM_PROMPT.md
building-specialized-agents/apps/custom_3_calc_agent/: README.md  calc_agent.py  pyproject.toml
building-specialized-agents/apps/custom_3_calc_agent/prompts/: CALC_AGENT_SYSTEM_PROMPT.md
building-specialized-agents/apps/custom_4_social_hype_agent/: .env.sample  README.md  pyproject.toml  social_hype_agent.py  social_hype_results.csv
building-specialized-agents/apps/custom_4_social_hype_agent/modules/: __init__.py  agent.py  tools.py  tts_notifier.py  utils.py
building-specialized-agents/apps/custom_4_social_hype_agent/prompts/: SOCIAL_HYPE_AGENT_SYSTEM_PROMPT.md
building-specialized-agents/apps/custom_6_tri_copy_writer/backend/: main.py  pyproject.toml
building-specialized-agents/apps/custom_7_micro_sdlc_agent/backend/: main.py  pyproject.toml
building-specialized-agents/apps/custom_7_micro_sdlc_agent/backend/db/: database.py
building-specialized-agents/apps/custom_7_micro_sdlc_agent/backend/modules/: agent_orchestrator.py  config.py
building-specialized-agents/apps/custom_7_micro_sdlc_agent/backend/reviews/: update-html-title-micro-sdlc-review.md
building-specialized-agents/apps/custom_7_micro_sdlc_agent/backend/specs/: test-user-management-api-implementation.md  update-html-title-micro-sdlc.md
building-specialized-agents/apps/custom_7_micro_sdlc_agent/backend/system_prompts/: PLANNER_AGENT_SYSTEM_PROMPT.md  REVIEWER_AGENT_SYSTEM_PROMPT.md
building-specialized-agents/apps/custom_7_micro_sdlc_agent/backend/user_prompts/: BUILDER_AGENT_USER_PROMPT.md  PLANNER_AGENT_USER_PROMPT.md  REVIEWER_AGENT_USER_PROMPT.md
building-specialized-agents/apps/custom_8_ultra_stream_agent/: README.md  generate_sample_data.py  pyproject.toml
building-specialized-agents/apps/custom_8_ultra_stream_agent/backend/: main.py
building-specialized-agents/apps/custom_8_ultra_stream_agent/data/: ultra_stream_agent.jsonl
building-specialized-agents/apps/custom_8_ultra_stream_agent/frontend/: index.html  package.json  vite.config.js
building-specialized-agents/apps/custom_8_ultra_stream_agent/frontend/src/: App.vue
building-specialized-agents/apps/custom_8_ultra_stream_agent/modules/: data_types.py
building-specialized-agents/apps/custom_8_ultra_stream_agent/system_prompts/: inspector_agent_system_prompt.md  stream_agent_system_prompt.md
elite-context-engineering/: .env.sample  .gitignore  .mcp.json.all_16k.sample  .mcp.json.firecrawl_7k.sample  CLAUDE.large.md  CLAUDE.md  README.md  package.json
multi-agent-orchestration/: ARCHITECTURE.md  (+2 more)
(+1784 files in other folders)
