[project]
name = "pong-agent"
version = "1.0.0"
description = "Simplest pong agent - Level 0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "rich>=13.0.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"