[project]
name = "calc-agent"
version = "1.0.0"
description = "Calculator agent with REPL - Level 1.2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "rich>=13.0.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"