[project]
name = "tri-chat-backend"
version = "1.0.0"
description = "FastAPI backend for Tri-Chat Agent - serves the Claude Agent SDK tri-perspective chat interface"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "claude-agent-sdk",
    "pydantic",
    "python-multipart",
    "rich",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "httpx"
]